--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "angular": "^1.8.3"
+        "angular": "^1.6.10",
+        "sweetalert2": "^11.10.3"
     }
 }
